--- a/style.css
+++ b/style.css
@@ -1,13 +1,24 @@
 body{
-  background:url(gold-of-egypt-logo-pattern-opacity-30.png) #FEFCF3 no-repeat 40%;
-  color: white;
+  background:url(gold-of-egypt-logo-pattern-opacity-30.png) #FCF9ED no-repeat 41%;
+  color: rgb(56, 56, 56);
 }
 .input-group{
-  width: 25%; 
+  width: 33%; 
   padding:5px;
 }
 #canvasWrapper{
   position: relative;
   min-height: 50vh ;
   color:white;
+}
+#text{
+  margin-top: 5px;
+  padding-right: 5px;
+  font-family: 'Comic Sans MS';
+  font-size: 22;
+  font-weight:bolder;
+}
+#reset{
+  font-weight:bolder;
+  padding: -1px 0px;
 }
